[package]
name = "multihash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multicodec = { path = "../multicodec" }
varint = { path = "../varint" }

openssl = { version = "0.10.45", features = ["vendored", "v111"] }
sha3 = "0.10.6"
ripemd = "0.1.3"
digest = "0.10.6"
blake2b_simd = "1.0.0"
blake2s_simd = "1.0.0"
blake3 = "1.3.3"
